--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -4,5 +4,5 @@ places: { label: "Search/Places", color: "#8BDB6B" }
 traffic: { label: "Traffic", color: "#F24E6E" }
 ev: { label: "EV", color: "#54D2C4" }
 geocode: { label: "Geocoding", color: "#B39DDB" }
-logistics: { label: "Logistics", color: "#F2C94C" }
+data: { label: "Logistics", color: "#F2C94C" }
 tools: { label: "Tools", color: "#00C2FF" }
