--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,8 +1,9 @@
 maps: { label: "Maps", color: "#3DB1FF" }
 routing: { label: "Routing", color: "#FF7A59" }
 places: { label: "Search/Places", color: "#8BDB6B" }
-traffic: { label: "Traffic", color: "#F24E6E" }
+live traffic: { label: "Live Traffic", color: "#F24E6E" }
+historical traffic: { label: "Historical Traffic", color: "#9E9E9E" }
 ev: { label: "EV", color: "#54D2C4" }
 geocode: { label: "Geocoding", color: "#B39DDB" }
-data: { label: "Logistics", color: "#F2C94C" }
+sdk&app: { label: "SDK&App", color: "#F2C94C" }
 tools: { label: "Tools", color: "#00C2FF" }
